[gd_scene load_steps=5 format=3 uid="uid://dteg3pl8btsy5"]

[ext_resource type="Script" path="res://scenes/objects/Switch.gd" id="1_5exhb"]
[ext_resource type="Texture2D" uid="uid://074b4ya0px1s" path="res://assets/Platformer Art Complete Pack/Base pack/Items/switchLeft.png" id="2_8kwly"]
[ext_resource type="Texture2D" uid="uid://bb6dnmgnl7bcs" path="res://assets/Platformer Art Complete Pack/Base pack/Items/switchRight.png" id="3_j07w8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8yoih"]
size = Vector2(10, 70)

[node name="Switch" type="Area2D"]
collision_layer = 2
script = ExtResource("1_5exhb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8yoih")

[node name="SwitchLeft" type="Sprite2D" parent="."]
texture = ExtResource("2_8kwly")

[node name="SwitchRight" type="Sprite2D" parent="."]
texture = ExtResource("3_j07w8")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
